--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,15 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>21</version> </dependency>
+        <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-fxml</artifactId>
+        <version>21</version>
+    </dependency>
     </dependencies>
 
     <!-- ===================================================== -->
@@ -99,6 +108,13 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-maven-plugin</artifactId>
+    <version>0.0.8</version>
+    <configuration>
+        <mainClass>pl.edu.go.client.GoBoardDemo</mainClass> </configuration>
+</plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
